client/css/jukebox.scss
/* ... */
/* =============================================
=          AppBody/Content                     =
============================================= */

.app-body__container {
	padding-top: 55px;
}

.songs__list-item-wrapper {
	position: relative;
	list-style: none;
	border-bottom: 1px solid #eee;
	margin-bottom: 2.4rem;

	& .playlist__item__active {
		opacity: 1;
		color: brown;
		font-weight: bold;
	}

	& .playlist__item__active-host {
		font-size: 30px;
		left: 5px;
	}
}

.songs__list-item {
	position: relative;
	display: flex;
	align-items: center;
	justify-content: flex-end;
	margin: 0;
	background-color: $color-01;

	&__container {
		display: flex;
		align-items: center;
		width: 100%;
	}

	&__thumbnail {
		display: flex;
		position: relative;
		width: 40px;

		& img {
			width: 40px;
			height: 40px;
		}

		&--link {
			display: flex;
		}

		&--sc::after {
			background-image: url(/logo-soundcloud.png);
		}

		&--nct::after {
			background-image: url(/logo-nct.png);
		}

		&--zing::after {
			background-image: url(/logo-zing.png);
		}

		&--yt::after {
			background-image: url(/logo-youtube.png);
		}

		&--link::after {
			content: '';
			position: absolute;
			bottom: 0;
			left: 0;
			width: 100%;
			height: 100%;
			background-size: auto 10px;
			background-repeat: no-repeat;
			background-position: left bottom;
		}
	}

	&__name {
		text-overflow: ellipsis;
		white-space: nowrap;
		overflow: hidden;
		margin-left: 15px;

		&--link {
			color: black;
			font-size: 14px;

			&:hover {
				text-decoration: none;
			}
		}
	}

	&__control {
		display: flex;
		align-items: center;

		& span {
			padding: 2px 10px;

			&:first-child {
				padding-left: 0;
			}
		}
	}

	&__icon {
		cursor: pointer;
		color: gray;
		transition: all 0.4s;
	}

	&__author {
		position: absolute;
		left: 0;
		top: 100%;
		transform: translate3d(0, 100%, 0);
		line-height: 0.9;
		z-index: 1;
		font-size: 12.5px;
	}
}

@media screen and (min-width: 480px) {
	.songs__list-item {
		justify-content: space-between;

		&__container {
			width: auto;

			&:first-child {
				padding-left: 0;
				width: calc(100% - 245px);
			}
		}

		&__author {
			top: 50%;
			left: 0;
			transform: translate3d(-50%, -50%, 0);
			font-size: 15px;
			line-height: 1;
			display: block;
			white-space: nowrap;
		}
	}
}

@media screen and (min-width: 767px) {
	.app-body__container {
		padding-top: 155px;
		min-height: calc(100vh - 75px);
	}

	.songs__list-item-wrapper {
		border: none;
		margin-bottom: 4px;

		& .playlist__item__active-host {
			left: 0;
			display: flex;
			align-items: center;
			height: 100%;
		}
	}

	.songs__list-item {
		margin: 0;
		cursor: pointer;
		background-color: $color-01;

		&__container {
			position: relative;
			width: auto;

			&:first-child {
				padding-left: 0;
			}

			&:last-child {
				padding-right: 0;
			}
		}

		&:hover {
			background-color: #fafafa;
		}

		&__thumbnail {
			display: flex;
			position: relative;

			& img {
				width: 40px;
				height: 40px;
			}

			&--link {
				display: flex;
			}

			&--sc::after {
				background-image: url(/logo-soundcloud.png);
			}

			&--nct::after {
				background-image: url(/logo-nct.png);
			}

			&--zing::after {
				background-image: url(/logo-zing.png);
			}

			&--yt::after {
				background-image: url(/logo-youtube.png);
			}

			&--link::after {
				content: '';
				position: absolute;
				bottom: 0;
				left: 0;
				width: 100%;
				height: 100%;
				background-size: auto 10px;
				background-repeat: no-repeat;
				background-position: left bottom;
			}
		}

		&__icon {
			&:hover {
				color: #000;
			}

			&--disable {
				cursor: default;
				opacity: 0.4;

				&:hover {
					color: grey;
				}
			}
		}

		&__author {
			top: 50%;
			left: 0;
			transform: translate3d(-150%, -50%, 0);
			font-size: 15px;
			line-height: 1;
			display: block;
			white-space: nowrap;
		}

		&__name {
			&--link {
				font-size: 15px;
			}
		}
	}
}

.tab__top-list {
	&__title {
		display: inline-block;
	}

	&__item {
		display: flex;
		flex-direction: column;
		align-items: start;
		margin-bottom: 0;
		width: 22%;
		overflow: hidden;
		margin-top: 15px;
	}

	&__date {
		font-size: 16px;
	}

	&__inner {
		margin-bottom: 0;
	}

	&__image {
		width: 100%;
	}

	&__image-outter {
		width: 100%;
		overflow: hidden;
	}

	&__name {
		width: 100%;
	}

	&__artist {
		width: 100%;
	}
}

// the position of fixed elements should be out of scrolling-area to remove juddering when scroll, https://remysharp.com/2012/05/24/issues-with-position-fixed-scrolling-on-ios
.scroll-content {
	margin-top: $header-h;
	padding-top: $playlist-h;
}

.playlist-nav {
	position: fixed;
	width: 100%;
	top: $header-h;
	background-color: white;
	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
	z-index: 99;

	&._focus {
		transition: top 0.5s;
		top: $header-h !important;
	}

	&__list {
		list-style-type: none;
		margin-bottom: 0;
	}

	&__item {
		display: inline-block;
		margin: 0;
		transition: all 0.5s;

		a {
			padding: $gutter;
			color: black;
			display: inline-block;
			text-decoration: none;
			transition: all 0.5s;
			opacity: 0.5;

			&:hover {
				background-color: whitesmoke;
				opacity: 1;
			}
		}

		input {
			border-color: white;
			margin-top: 0.5 * $gutter;
			margin-bottom: 0;
			text-align: right;
		}

		&:first-child {
			margin-left: -$gutter;
		}

		&--right {
			float: right;
		}

		&._active {
			position: relative;

			a {
				opacity: 1;
			}

			&::after {
				content: '_';
				position: absolute;
				bottom: 0;
				left: 50%;
				transform: translateX(-50%);
				font-weight: 600;
				font-size: 22px;
				color: $color-04;
			}

			&.playlist-nav__item__right {
				&::after {
					content: none;
				}
			}
		}
	}
}

.main-content {
	padding-top: 2 * $gutter;
	padding-bottom: 2 * $gutter;
}
/* ... */

